<?xml version="1.0"?>
<package format="2">
    <name>iris</name>
    <version>0.0.0</version>
    <description>The ROS package for Iris</description>

    <maintainer email="kento.yabuuchi@tier4.jp">Kento Yabuuchi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>

    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>visualization_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>tf</build_export_depend>

    <exec_depend>image_transport</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
</package>