<?xml version="1.0"?>
<package format="2">
    <name>vllm</name>
    <version>0.0.0</version>
    <description>The ROS package for VLLM</description>

    <maintainer email="kyabuuchi@todo.todo">Kento Yabuuchi</maintainer>
    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>

    <exec_depend>image_transport</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
</package>
